src/test/deca/context/invalid/created/SansObjet/InvalidTypeWhile.deca
// Resultats:
//    Erreur contextuelle
//    Ligne 15: while condition must be a boolean expression

{
    while(1+1) {
        println("aaa");
    }
}